--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#typed', {
-            strings: [' a Student', 'a Developer', 'HIM'],
+            strings: [' a Student', 'a Student', 'a Student'],
             typeSpeed: 55,
             loop: true
         });
